--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a:link{
     width: 100%;
 }
 h1{
-    display: flex;
+    
     position: absolute;  
     top: 30%;
     bottom: 50%;  
@@ -72,4 +72,8 @@ button{
 }
 h2{
     padding: 50px;
+}
+.compt{
+    display: flex;
+    justify-content: space-around;
 }
